<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_baseline_image_24" />

            <TextView
                android:id="@+id/textView"
                style="@android:style/TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blur_title" />

            <RadioGroup
                android:id="@+id/radio_group_blur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checkedButton="@id/blur_lvl_1">

                <RadioButton
                    android:id="@+id/blur_lvl_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blur_lv_1" />

                <RadioButton
                    android:id="@+id/blur_lvl_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blur_lv_2" />

                <RadioButton
                    android:id="@+id/blur_lvl_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blur_lv_3" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel_work"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:indeterminate="true"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/go_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/go" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>